--- a/Gataveckas_Gaulia_Martinkus_laboratorinio_1_kodas_R_DM_2gr.Rmd
+++ b/Gataveckas_Gaulia_Martinkus_laboratorinio_1_kodas_R_DM_2gr.Rmd
@@ -2,7 +2,7 @@
 title: "Logistinė regresija"
 author: "Vainius Gataveckas, Matas Gaulia, Dovydas Martinkus"
 output:
-   word_document: default
+   html_document: default
 ---
 
 
@@ -148,7 +148,7 @@ cp$roc_curve[[1]] %>%
   coord_equal() +
   geom_abline() +
   theme_bw() +
-  xlab("Specificity") +
+  xlab("1-Specificity") +
   ylab("Sensitivity")
 
 
