sutvarkyta missing values/ prideta classification matrix paskutiniam modeliui

--- a/Gataveckas_Gaulia_Martinkus_laboratorinio_1_kodas_R_DM_2gr.Rmd
+++ b/Gataveckas_Gaulia_Martinkus_laboratorinio_1_kodas_R_DM_2gr.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 library(tidyverse)
 
 y <- read_csv("diabetes.csv")
-
+y <- y %>% filter(BloodPressure != 0,BMI != 0)
 
 table(y$Outcome)
 ```
@@ -55,6 +55,8 @@ model <- glm(
   formula = Outcome ~ ., family = binomial(logit),
   data = y
 )
+
+summary(model)
 
 1-pchisq(model$null.deviance-model$deviance, model$df.null-model$df.residual) # globali nulinė hipotezė (tikėtinumo santykių testas likelihood ratio test)
 
@@ -103,7 +105,7 @@ model <- glm(
 
 ```{r}
 # reikšminų kovariančių atranka
-model_2 <- step(model,direction = "both")
+model_2 <- MASS::stepAIC(model,direction = "both")
 
 anova(model, model_2, test = "Chisq") # modelis statistiškai reikšmingai nesiskiria nuo modelio su visomis kovariantėmis
 
@@ -160,7 +162,7 @@ roc_auc(y_2, Outcome, pred, event_level = "second")
 ```{r}
 # dėl didelio TN skaičiaus ROC rezultatai gali būti per daug optimistiški, todėl papildomai naudojama PR kreivė
 cutoff <- cp$roc_curve[[1]] %>%
-  filter(tpr > 0.9) %>%
+  filter(tpr >= 0.9) %>%
   pull(m) %>%
   max()
 
@@ -185,9 +187,14 @@ cp$roc_curve[[1]] %>%
 
 
 ```{r}
+# klasifikavimo lentelė su pasirinkta nauja slenkstine reikšme
+confusionMatrix(factor(as.numeric(model_2$fitted.values >= 0.21)), factor(y$Outcome),positive="1")
+```
+
+```{r}
 # palyginimas su probit modeliu
 model_3 <- glm(
-  formula = Outcome ~ Pregnancies + Glucose + BMI + DiabetesPedigreeFunction, family = binomial(probit),
+  formula = Outcome ~ Pregnancies + Glucose + BMI + DiabetesPedigreeFunction + Age, family = binomial(probit),
   data = y
 )
 
