--- a/Lab2/Gataveckas_Gaulia_Martinkus_laboratorinio_2_kodas_R_DM_2gr.Rmd
+++ b/Lab2/Gataveckas_Gaulia_Martinkus_laboratorinio_2_kodas_R_DM_2gr.Rmd
@@ -3,7 +3,6 @@ title: "Regresija įvykių skaičiui"
 author: "Vainius Gataveckas, Matas Gaulia, Dovydas Martinkus"
 output:
    html_document: default
-   word_document: default
 ---
 
 
@@ -26,20 +25,29 @@ tr <- read.csv("train.csv")
 te <- read.csv("test.csv")
 te$count <- te$casual + te$registered
 full <- rbind(tr, te)
+
 full <- full %>%
-  dplyr::select(-c(datetime, casual, registered)) %>%
+  dplyr::select(-c(casual, registered)) %>%
+  mutate(
+    hour = lubridate::hour(datetime)
+  ) 
+```
+
+
+```{r}
+full <- full %>%
+  filter(hour %in% c(12,13,14)) %>% 
+  dplyr::select(-c(hour,datetime)) %>%
   mutate(
     season = factor(season),
     holiday = factor(holiday),
     workingday = factor(workingday),
     weather = factor(weather)
   )
-```
 
-
-```{r}
 head(full)
 ```
+
 
 
 
@@ -50,6 +58,36 @@ full_split <- initial_split(full, prop = 0.9)
 train <- training(full_split)
 test <- testing(full_split)
 
+write_csv(train,"train_from_R.csv")
+write_csv(test,"test_from_R.csv")
+```
+
+
+
+```{r}
+# Siekiant gauti tokius pat rezultatus duomenys nuskaitomi iš failų
+train <- read_csv("train_from_R.csv")
+  
+test <- read_csv("test_from_R.csv")
+
+train <- train %>%
+    mutate(
+    season = factor(season),
+    holiday = factor(holiday),
+    workingday = factor(workingday),
+    weather = factor(weather)
+  )
+
+test <- test %>%
+    mutate(
+    season = factor(season),
+    holiday = factor(holiday),
+    workingday = factor(workingday),
+    weather = factor(weather)
+  )
+
+
+min(test$count)
 
 ggplot(train, aes(x = count)) +
   geom_histogram() +
@@ -59,12 +97,6 @@ ggplot(train, aes(x = count)) +
 # Dispersija didesnė už vidurkį
 mean(train$count)
 var(train$count)
-
-
-train %>%
-  mutate(q = ntile(count, 6)) %>%
-  group_by(q) %>%
-  summarize(mean = mean(count), var = var(count))
 ```
 
 
@@ -130,36 +162,23 @@ summary(model_1)
 cat("Deviacija padalinta iš laisvės laipsnių: ", model_1$deviance / model_1$df.residual, "\n")
 cat("Siekiama, kad būtų tarp 0.7 ir 1.3")
 
-# Tikrinima hipotezė, kad modelis nėra per didelės dispersijos
-dispersiontest(model_1, trafo = 2)
+# Tikrinima hipotezė, kad modelis nėra per didelės dispersijos (tiesinės dispersijos funkcijos alternatyva)
+dispersiontest(model_1, trafo = 1)
 ```
 
 ```{r}
-# Neigiamas binominis modelis
-model_2 <- glm.nb(count - 1 ~ ., data = train)
+model_2 <- glm(count ~ ., family = quasipoisson(), data = train)
 summary(model_2)
-
-cat("Deviacija padalinta iš laisvės laipsnių: ", model_2$deviance / model_2$df.residual, "\n")
 ```
-
 
 ```{r}
 plot(cooks.distance(model_2))
-tibble(fitted = model_2$fitted.values, resid = resid(model_2, "pearson")) %>%
+tibble(fitted = model_2$fitted.values,resid = resid(model_2, "pearson") / sqrt(31.8)) %>%
   ggplot(aes(fitted, resid)) +
   geom_point(alpha = 0.1) +
   geom_smooth(se = F)
 ```
 
-
-
-```{r}
-# Stepwise selection
-model_2_step <- stepAIC(model_2)
-
-# Gaunamas lygiai toks pat modelis
-anova(model_2, model_2_step)
-```
 
 
 ```{r }
@@ -177,13 +196,13 @@ plot(predictorEffects(model_2))
 
 ```{r}
 # Modelio panaudojimas prognozėms naudojant testavimo duomenų aibę
-test_with_pred <- test %>% mutate(count = count, pred = predict(model_2_step, test, type = "response"))
+test_with_pred <- test %>% mutate(count = count, pred = predict(model_2, test, type = "response"))
 
 test_with_pred %>%
   dplyr::select(c(count, pred)) %>%
   pivot_longer(everything()) %>%
   ggplot(aes(x = value, fill = name)) +
-  geom_histogram() +
+  geom_histogram(bins = 25) +
   theme_minimal() +
   facet_wrap(vars(name))
 ```
@@ -199,31 +218,67 @@ mae(test_with_pred, count, pred)
 
 
 
-
 ```{r}
-# Zero-truncated modelis kaip alternatyva
-library(VGAM)
-ztrunc <- vglm(count ~ ., family = posnegbinomial(), data = train)
+# Palyginimui sudaromas neigiamas binominis modelis (kvadratinė dispersijos funkcija)
+dispersiontest(model_1, trafo = 2)
 
-summary(ztrunc)
+model_3 <- glm.nb(count  ~ ., data = train)
+summary(model_3)
+
+cat("Deviacija padalinta iš laisvės laipsnių: ", model_3$deviance / model_3$df.residual, "\n")
 ```
 
+
+
+
 ```{r}
-# Modelio prognozės
-test_with_pred <- test %>% mutate(pred = predict(ztrunc, test, type = "response")[, 1])
+plot(cooks.distance(model_3))
+tibble(fitted = model_2$fitted.values,resid = resid(model_3, "pearson")) %>%
+  ggplot(aes(fitted, resid)) +
+  geom_point(alpha = 0.1) +
+  geom_smooth(se = F)
+```
+
+
+
+```{r}
+# Galima pažingsninė regresija
+model_3_step <- stepAIC(model_3)
+
+# Gaunamas lygiai toks pat modelis
+anova(model_3, model_3_step)
+```
+
+
+```{r }
+est <- cbind(Estimate = exp(coef(model_3)), exp(confint(model_3)))
+est
+```
+
+
+```{r}
+plot(predictorEffects(model_3))
+```
+
+
+```{r}
+test_with_pred <- test %>% mutate(count = count, pred = predict(model_3, test, type = "response"))
 
 test_with_pred %>%
   dplyr::select(c(count, pred)) %>%
   pivot_longer(everything()) %>%
   ggplot(aes(x = value, fill = name)) +
-  geom_histogram() +
+  geom_histogram(bins = 12) +
   theme_minimal() +
   facet_wrap(vars(name))
 ```
 
 
-
 ```{r}
+library(yardstick)
+
 rmse(test_with_pred, count, pred)
 mae(test_with_pred, count, pred)
 ```
+
+
