--- a/Lab3/Gataveckas_Gaulia_Martinkus_laboratorinio_3_kodas_R_DM_2gr.Rmd
+++ b/Lab3/Gataveckas_Gaulia_Martinkus_laboratorinio_3_kodas_R_DM_2gr.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Splainų Regresija"
+title: "Netiesinė regresija"
 author: "Vainius Gataveckas, Matas Gaulia, Dovydas Martinkus"
 output:
    html_document: default
@@ -11,17 +11,19 @@ knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 ```
 
 ```{r, message=FALSE}
-# Duomenys
+# Duomenų šaltinis
 # https://www.kaggle.com/datasets/elikplim/concrete-compressive-strength-data-set
 
 library(tidyverse)
-
 library(rsample)
 
 concrete <- read_csv("concrete_data.csv")
 
-concrete <- concrete %>% rename(strength = concrete_compressive_strength)
+concrete <- concrete %>%
+  unique() %>%
+  rename(strength = concrete_compressive_strength)
 
+# Padalijama į mokymo ir testavimo aibes
 set.seed(123)
 concrete_split <- initial_split(concrete)
 concrete_train <- training(concrete_split)
@@ -36,103 +38,143 @@ correlation_matrix <- concrete_train %>%
   cor()
 
 corrplot(correlation_matrix, order = "original", method = "color", type = "upper", diag = FALSE, tl.col = "black", addCoef.col = "black")
-
 ```
 
 
 ```{r}
-concrete_train %>% pivot_longer(-strength) %>% ggplot(aes(value,strength)) + geom_point() + facet_wrap(vars(name),scales="free")  + 
-  geom_smooth() + theme_minimal()
+# tarp kovariančių ir atsako matome galimus netiesinis sąryšius
+concrete_train %>%
+  pivot_longer(-strength) %>%
+  ggplot(aes(value, strength)) +
+  geom_point() +
+  facet_wrap(vars(name), scales = "free") +
+  geom_smooth() +
+  theme_minimal()
 ```
 
 
+
+
+```{r}
+# Pirma sudaromas paprastos regresijos modelis
+library(car)
+
+model_linear <- lm(strength ~ cement + blast_furnace_slag + fly_ash +
+  water + superplasticizer
+  + coarse_aggregate + fine_aggregate + age, data = concrete_train)
+
+
+plot(model_linear)
+crPlots(model_linear)
+```
+
+
+```{r}
+# "naivus" metodas pagerinti modelį pridedant aukštesnius kovariančių laipsnius
+model_linear2 <- lm(strength ~ cement + +blast_furnace_slag
+  + fly_ash + water + I(water^2)
+  + superplasticizer + I(superplasticizer^2)
+  + coarse_aggregate + fine_aggregate + age + I(age^2),
+data = concrete_train
+)
+
+plot(model_linear2)
+summary(model_linear2)
+crPlots(model_linear2)
+```
+
+
+```{r}
+# modelis reikšmingai skiriasi nuo modelio be aukštesnio laipsnio narių
+library(MASS)
+anova(model_linear, model_linear2)
+
+# sudaromas galutinis modelis pažingsnine regresija išrinkus kovariantes
+model_linear_final <- stepAIC(model_linear2)
+summary(model_linear_final)
+```
 
 
 ```{r}
 library(mgcv)
-model_linear <- lm(strength~ cement + blast_furnace_slag + fly_ash +
-             water + superplasticizer
-             + coarse_aggregate + fine_aggregate + age, data=concrete_train)
+library(gratia)
+# Alternatyvus modelis: apibendrintas adityvus modelis su glodniaisiais splainais
+
+# lambda parametras parenkamas automatiškai pagal generalized cross-validation
+model_gam <- gam(strength ~ s(cement) + s(blast_furnace_slag) + s(fly_ash)
+  + s(water) + s(superplasticizer)
+  + s(coarse_aggregate) + s(fine_aggregate) + s(age),
+data = concrete_train,
+select = TRUE
+)
+
+gam.check(model_gam)
+summary(model_gam)
+draw(model_gam)
 ```
 
 
-```{r}
-summary(model_linear)
-plot(model_linear)
 
+```{r}
+# Padidinamas mazgų skaičius
+model_gam2 <- gam(strength ~ s(cement) + s(blast_furnace_slag, k = 20) + s(fly_ash, k = 20)
+  + s(water, k = 20) + s(superplasticizer, k = 20)
+  + s(coarse_aggregate, k = 20) + s(fine_aggregate, k = 20) + s(age, k = 10),
+data = concrete_train,
+select = TRUE
+)
+
+gam.check(model_gam2)
+summary(model_gam2)
+draw(model_gam2)
+
+# modelis statistiškai reik6mingai skiriasi nuo modelio su mažesniu mazgų skaičiumi
+anova(model_gam, model_gam2, test = "Chisq")
+```
+
+
+
+
+
+```{r}
+# modelio palyginimas su prieš tai sudarytu paprastos regresijos modeliu
 library(effects)
-plot(predictorEffects(model_linear))
+AIC(model_linear_final)
+AIC(model_gam2)
+
+plot(predictorEffects(model_linear_final))
+draw(model_gam2)
 ```
 
 
 
 ```{r}
-model <- gam(strength~ cement + blast_furnace_slag + fly_ash
-             + s(water) + s(superplasticizer) 
-             + coarse_aggregate + fine_aggregate + age, data=concrete_train, method="REML")
-gam.check(model)
-summary(model)
-```
-
-```{r}
-model <- gam(strength~ cement + blast_furnace_slag + fly_ash
-             + s(water) + s(superplasticizer) + age, data=concrete_train, method="REML")
-summary(model)
-```
-
-
-
-```{r}
-anova(model_linear,model,test = "Chisq")
-
-AIC(model_linear)
-AIC(model)
-```
-
-
-
-
-
-```{r}
-model <- gam(strength~ s(cement) + s(blast_furnace_slag) + s(fly_ash)
-             + s(water) + s(superplasticizer) 
-             + coarse_aggregate + fine_aggregate + s(age), data=concrete_train, method="REML")
-
-AIC(model)
-
-```
-
-
-```{r}
-model <- gam(strength~ te(cement,blast_furnace_slag) + s(blast_furnace_slag) + s(fly_ash)
-             + s(water) + s(superplasticizer) 
-             + coarse_aggregate + fine_aggregate + s(age), data=concrete_train, method="REML")
-
-AIC(model)
-```
-
-```{r}
-# check for overfit
+# Nors naudoti glodnieji splainai, naudojant testavimo aibę patikrinama ar kažkur nebuvo padaryta klaidų ir
+# modelis tikrai nepersimokė
 library(yardstick)
 
-concrete_test <- concrete_test %>% 
-  mutate(predicted = predict(model_linear,concrete_test))
+concrete_test <- concrete_test %>%
+  mutate(predicted_linear = predict(model_linear_final, concrete_test))
 
-rmse(concrete_test, strength, predicted)
-mae(concrete_test, strength, predicted)
+rmse(concrete_test, strength, predicted_linear)
+mae(concrete_test, strength, predicted_linear)
 
 
 
-concrete_test <- concrete_test %>% 
-  mutate(predicted = predict(model,concrete_test))
+concrete_test <- concrete_test %>%
+  mutate(predicted_gam = predict(model_gam2, concrete_test))
 
-rmse(concrete_test, strength, predicted)
-mae(concrete_test, strength, predicted)
+rmse(concrete_test, strength, predicted_gam)
+mae(concrete_test, strength, predicted_gam)
+# tiek pagal MAE, tiek pagal RMSE naudojant gam modelį gaunami geresni rezultatai
+
+# Modelių palyginimas
+concrete_test %>%
+  pivot_longer(c(predicted_gam, predicted_linear)) %>%
+  ggplot(aes(strength, value)) +
+  geom_point() +
+  facet_wrap(vars(name)) +
+  geom_abline(color = "red", size = 1.25) +
+  labs(x = "Actual", y = "Predicted") +
+  theme_minimal()
 ```
-
-
-
-
-```{r}
-```
-
